--- a/index.html
+++ b/index.html
@@ -225,4 +225,10 @@
         <p>&copy; 2025 Freelancer Serviços - BADLANDER - Todos os direitos reservados.</p>
     </footer>
 </body>
+    <form action="https://your-odoo-domain.com/crm/lead" method="POST">
+    <input type="text" name="name" placeholder="Seu Nome" required>
+    <input type="email" name="email_from" placeholder="Seu Email" required>
+    <textarea name="description" placeholder="Sua Mensagem" required></textarea>
+    <button type="submit">Enviar</button>
+    </form>
 </html>
