Update index.html (With email linked)

--- a/index.html
+++ b/index.html
@@ -224,6 +224,6 @@
     <footer>
         <p>&copy; 2025 Freelancer Serviços - BADLANDER - Todos os direitos reservados.</p>
     </footer>
-https://formsubmit.co/el/kawuma
+<form action="https://formsubmit.co/badlandereditz@gmail.com" method="POST">
 </body>
 </html>
