--- a/index.html
+++ b/index.html
@@ -384,7 +384,8 @@
 
             <h2>Sobre Mim</h2>
 
-            <p>Sou um freelancer especializado em mídia digital e gestão de redes sociais. Meu objetivo é ajudar empresas e indivíduos a alavancarem sua presença online com conteúdos criativos e estratégicos. Trabalho com dedicação para garantir resultados eficazes.</p>
+            <p>Sou BADLANDER, um criador digital apaixonado por transformar ideias em experiências únicas. Trabalho para empresas e indivíduos que buscam ir além do comum, criando designs impactantes, conteúdos que engajam e soluções inovadoras. 
+     Se você busca uma presença online que se destaque e crie conexões reais, estou aqui para ajudar a tornar isso possível.</p>
 
             <a href="#contato" class="button">Entre em Contato</a>
 
@@ -398,11 +399,10 @@
 
             <ul>
 
-                <li>Gestão de conteúdo de mídia</li>
-
-                <li>Criação de edits para redes sociais (TikTok)</li>
-
-                <li>Aulas básicas de HTML e CSS</li>
+                 <li>Design visual profissional</li>
+ <li>Edição de vídeos para redes sociais e projetos</li>
+ <li>Criação de conteúdo criativo e estratégico</li>
+ <li>Desenvolvimento de bots (como para WhatsApp)</li>
 
             </ul>
 
