--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
 
             <h2>Sobre Mim</h2>
 
-            <p>Sou BADLANDER, um criador digital apaixonado por transformar ideias em experiências únicas. Trabalho para empresas e indivíduos que buscam ir além do comum, criando designs impactantes, conteúdos que engajam e soluções inovadoras. 
-     Se você busca uma presença online que se destaque e crie conexões reais, estou aqui para ajudar a tornar isso possível.</p>
+            <p>Sou BADLANDER, um criador digital apaixonado por transformar ideias em experiências únicas. Trabalho para empresas e indivíduos que buscam ir além do comum, criando designs impactantes, conteúdos que engajam e soluções inovadoras.</p> 
+     <p>Se você busca uma presença online que se destaque e crie conexões reais, estou aqui para ajudar a tornar isso possível.</p>
 
             <a href="#contato" class="button">Entre em Contato</a>
 
